# Labs_secondsemest

./: CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: build.yml
Lab№1/: Final  Func.c  Header.h  Source.c
src/Lab№1/: Func.c  Header.h  Source.c  jsajfsajfj
src/Lab№2/Compression/: Compression.c  Compression.h  Func.c  Header.h  List.c  List.h  Source.c  Stack.c  Stack.h  Words.c  Words.h  dgdfg  laba1.txt
src/Lab№2/decomression/: Decompression.c  Decompression.h  Func.c  Header.h  List.c  List.h  Source.c  Words.c  Words.h  sfsfsd
src/Lab№3/: Check_choice.c  Check_choice.h  File_picture.c  File_picture.h  Func.c  Header.h  Menu.c  Menu.h  Source.c  ыефвфы
src/Lab№4/: Data.txt  Main.c  check.c  check.h  database.txt  resource.h  strings.c  strings.h  tree.c  tree.h  вфввфвфы
src/Lab№5/: Source.c  cache.c  cache.h  check.c  check.h  database.txt  file.c  file.h  hash.c  hash.h  main_func.c  main_func.h  фвыфвыфв
